# gexemplar

./: .openapi-generator-ignore  Cargo.toml  README.md  default.nix  go.mod  main.go
.cargo/: config
.github/workflows/: actions.yml
api/: openapi.yaml
docs/: DefaultApi.md  default_api.md
examples/: client.rs  server.rs
examples/server_lib/: server.rs
go/: api.go  api_default.go  api_default_service.go  api_default_service_test.go  logger.go  routers.go
src/: lib.rs  mimetypes.rs  models.rs
src/apis/: configuration.rs  default_api.rs
src/client/: mod.rs
src/server/: mod.rs
