[package]
name = "exemplar-rs"
version = "0.0.0"
authors = ["Dan Cline"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
hyper = "~0.11"
serde_yaml = "0.7"
base64 = "~0.7.0"
futures = "0.1.23"
chrono = "0.4.19"
swagger = "5.0.0"

# The dev dependencies currently
[dev-dependencies]
tokio-core = "*"
openssl = "0.10.30"
native-tls = "0.2.4"
tokio-proto = "0.1.1"
tokio-tls = "0.3.1"
clap = "2.33.3"
error-chain = "0.12.4"
